--- a/.htaccess
+++ b/.htaccess
@@ -8,3 +8,4 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^(.*)$ nagios-api/index.php?/$1 [L]
 </IfModule>
+php_flag display_errors on
